[package]
name = "axum_helper"
version = "0.1.0"
edition = "2021"
[dependencies]
axum = {version="0.6.10", features = ["json","headers"]}
tokio = { version="1.26.0", features = ["full"]}
serde = { version="1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded ="0.7.1"
validator = { version = "0.16.0", features = ["derive"] }
validator_derive = "0.16.0"
jsonwebtoken ="8.3.0"
futures = "0.3.27"
chrono = "0.4.24"