[package]
name = "axum_helper"
version = "0.1.0"
edition = "2021"
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
[dependencies]
axum = {version="0.6.10", features = ["json","headers"]}
tokio = { version="1.26.0", features = ["full"]}
#数据序列化
serde = { version="1.0.154", features = ["derive"] }
serde_json = "1.0.94"
serde_urlencoded ="0.7.1"
# 数据验证
validator = { version = "0.16.0", features = ["derive"] }
validator_derive = "0.16.0"
#jwt
jsonwebtoken ="8.3.0"
# 时间相关
chrono = "0.4.24"