[package]
name = "axum_helper"
version = "0.1.0"
edition = "2021"
[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
[dependencies]
axum = {version="0.7.4", features = ["json"]}
tokio = { version="1.36.0", features = ["full"]}
#数据序列化
serde = { version="1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded ="0.7.1"
# 数据验证
validator = { version = "0.16.1", features = ["derive"] }
validator_derive = "0.16.0"
#jwt
jsonwebtoken ="9.2.0"
# 时间相关
chrono = "0.4.34"
#资源内嵌
rust-embed = {version = "8.3.0",features = ["interpolate-folder-path"]}
#按文件扩展名猜测MIME/MediaType。
mime_guess ="2.0.4"